# Task-7_hw

./: config.ini  main.py  pyproject.toml  seeds.py
migrations/versions/: 53fc503f6752_init.py
